2022-12-24  Araki Ken  <arakiken@users.sf.net>

	* encodefilter/configure.in, baselib/configure.in:
	  3 configure.in files are itegrated to one file.

2022-11-19  Araki Ken  <arakiken@users.sf.net>

	* bl_map.h, pixmap_engine.c, */ui.h, ui_im.[ch], ui_sb_view.h,
	  ui_screen.c: Fix incompatible function pointer types which
	  becomes fatal with clang 16.

2022-11-09  Araki Ken  <arakiken@users.sf.net>

	* cocoa/install.sh, cocoa/install-sdl2.sh:
	  mkdir -p $HOME/mlterm(-sdl2).app/Contents/MacOS in advance.

2022-11-05  Araki Ken  <arakiken@users.sf.net>

	* aclocal.m4: Update to automake-1.16.5 and libtool-2.4.7.

	* ltmain.sh, install-sh, missing: Updated.

2022-10-30  Araki Ken  <arakiken@users.sf.net>

	* config.sub, config.guess: Updated.

	* encodefilter/configure.in: POBL_LIBS is never "".

2022-08-16  Araki Ken  <arakiken@users.sf.net>

	* c_imagelib.c: Fix buffer over-read.
	  (https://twitter.com/isaki68k/status/1555895011991883783)

	* vte.c: Fix https://github.com/arakiken/mlterm/pull/49.

2022-07-16  Araki Ken  <arakiken@users.sf.net>

	* wayland/ui_display.c, uitoolkit/Makefile.in:
	  - xdg-decoration is removed if COMPAT_LIBVTE is defined.
	  - vte_terminal_paste_text() is added.

2022-07-13  Araki Ken  <arakiken@users.sf.net>

	* libptyssh/vt_pty_ssh.c, libptymosh/vt_pty_mosh.cpp:
	  _socketpair(..., SOCKET*) -> _socketpair(..., int*) for 64-bit
	  windows.

	* vt_config_menu.c: The 1st argument of CreateProcess() is changed
	  from cmd_path (which causes failure in windows 11) to NULL.

2022-07-10  Araki Ken  <arakiken@users.sf.net>

	* ui_screen_manager.c, vt_pty_pipewin32.c:
	  Compiling error in win32 without libssh2 is fixed.

	* configure.in: libregex is checked if regex.h is found.

2022-07-03  Araki Ken  <arakiken@users.sf.net>

	* wayland/ui_display.c: decoration_configure() doesn't call
	  xdg_surface_ack_configure().
	  (https://github.com/arakiken/mlterm/issues/44)

2022-06-05  Araki Ken  <arakiken@users.sf.net>
